# bosun

./: .gitignore  Cargo.toml  LICENSE  README.en.md  README.md
.github/workflows/: ci.yml
crates/bosun/: Cargo.toml  build.rs
crates/bosun-daemon/: Cargo.toml  build.rs
crates/bosun-daemon/src/: main.rs
crates/bosun-daemon/src/auth/: interceptor.rs  mod.rs
crates/bosun-daemon/src/backup/: mod.rs
crates/bosun-daemon/src/cluster/: mod.rs
crates/bosun-daemon/src/deploy/: mod.rs
crates/bosun-daemon/src/docker/: client.rs  mod.rs
crates/bosun-daemon/src/gateway/: mod.rs
crates/bosun-daemon/src/health/: mod.rs
crates/bosun-daemon/src/hooks/: mod.rs
crates/bosun-daemon/src/mcp/: mod.rs
crates/bosun-daemon/src/metrics/: mod.rs
crates/bosun-daemon/src/persist/: mod.rs
crates/bosun-daemon/src/proxy/: mod.rs
crates/bosun-daemon/src/security/: mod.rs
crates/bosun-daemon/src/server/: mod.rs
crates/bosun-daemon/src/templates/: mod.rs
crates/bosun-daemon/src/webhook/: mod.rs
crates/bosun/src/: cli.rs  client.rs  main.rs  proto.rs
crates/bosun/src/dashboard/: mod.rs
docs/plans/: 2026-06-28-mvp-architecture.md
proto/bosun/v1/: bosun.proto
scripts/: bosun-daemon.service  install.sh  uninstall.sh
templates/catalog/: adminer.toml  caddy.toml  cadvisor.toml  cassandra.toml  claude-code.toml  clickhouse.toml  cockroachdb.toml  couchdb.toml  directus.toml  drone-ci.toml  emqx.toml  ghost.toml  gitea.toml  gitlab-runner.toml  grafana.toml  haproxy.toml  hermes-agent.toml  influxdb.toml  jenkins.toml  kafka.toml  mariadb.toml  meilisearch.toml  memcached.toml  minio.toml  mongo.toml  mysql.toml  nats.toml  neo4j.toml  nextcloud.toml  nginx.toml  node-exporter.toml  ollama.toml  open-webui.toml  phpmyadmin.toml  portainer.toml  postgres.toml  prometheus.toml  rabbitmq.toml  redis.toml  registry.toml  (+6 more)
