[package]
name = "bosun-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "bosun-daemon"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tonic.workspace = true
prost.workspace = true
bollard.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rusqlite.workspace = true
tera.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true

# Uncomment when ready
# instant-acme.workspace = true

[build-dependencies]
tonic-build.workspace = true
