[package]
name = "bosun"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "bosun"
path = "src/main.rs"

[dependencies]
# Workspace deps
tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tonic.workspace = true
prost.workspace = true
tabled.workspace = true
indicatif.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
futures-util.workspace = true
jsonwebtoken.workspace = true
chrono.workspace = true
toml.workspace = true
reqwest.workspace = true
ratatui.workspace = true
crossterm.workspace = true

# TLS for gRPC
rustls.workspace = true
rustls-pemfile.workspace = true

[build-dependencies]
tonic-build.workspace = true
